--- a/PeenyPaint/app/src/main/res/layout/activity_main.xml
+++ b/PeenyPaint/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context="com.codeclan.peenypaint.MainActivity">
+    tools:context="com.codeclan.peenypaint.ColourTuneActivity">
     
     <com.codeclan.peenypaint.CanvasView
         android:layout_width="match_parent"
