--- a/PeenyPaint/app/src/main/res/layout/activity_draw.xml
+++ b/PeenyPaint/app/src/main/res/layout/activity_draw.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codeclan.peenypaint.DrawActivity">
+    android:background="#ffffff"
+    tools:context="com.codeclan.peenypaint.ColourTuneActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <com.codeclan.peenypaint.ColourTuneActivity
+        android:layout_width="match_parent"
+        android:id="@+id/canvas"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_height="match_parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear"
+        android:onClick="clearCanvas"
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="460dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
+
